--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ernest-chen/vue-msal",
+  "name": "@ernest-chen/vue-msal-b2c",
   "version": "3.2.1",
   "description": "Vue plugin for using Microsoft Authentication Library (MSAL)",
   "main": "dist/plugin.js",
